deployment/helloapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellodeployment
spec:
  selector:
    matchLabels:
      app: helloapp
  replicas: 2
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
      - name: hello
        image: azureworkshopnet/helloworld:latest
