deployment/helloapp-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: helloapp
