deployment/helloapp-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: helloapp
