deployment/server-info-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-info-deployment
spec:
  selector:
    matchLabels:
      app: server-info-app
  replicas: 1
  template:
    metadata:
      labels:
        app: server-info-app
    spec:
      containers:
      - name: server-info
        image: azureworkshopnet/server-info

---
apiVersion: v1
kind: Service
metadata:
  name: server-info
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: server-info-app
